change icon of navbar

--- a/job.html
+++ b/job.html
@@ -22,12 +22,12 @@
                     <i class="fas fa-bars"></i>
                 </label>
             <ul id="menu">
-              <li><a href="">Home</a></li>
-              <li><a href="">Dashboard</a></li>
-              <li><a href="">Contact</a></li>
-              <button id="s-button">Sign in</button>
+              <li><a href=""><i class="fas fa-house"></i> Home</a></li>
+              <li><a href=""><i class="fas fa-tv"></i> Dashboard</a></li>
+              <li><a href=""><i class="fas fa-phone"></i> Contact</a></li>
+              <button id="s-button"><i class="fas fa-user"></i> Sign in</button>
               <h2>|</h2>
-              <li class="employer"><a href="index.html">post job</a></li>          
+              <li class="employer"><a href="index.html"><i class="fas fa-briefcase"></i> post job</a></li>          
                
             </ul>
          </nav>
@@ -51,7 +51,7 @@
             <br>
                <div class="search">
                   <input type="text" placeholder="   search your job here...">
-               <a href="#"><button id="se-button">Search</button></a>
+               <a href="#"><button id="se-button"><i class="fas fa-magnifying-glass"></i> Search</button></a>
                </div>
          </dev>
         
